Style circle and line between

--- a/src/layout/l-features-wrapper/l-features-wrapper.scss
+++ b/src/layout/l-features-wrapper/l-features-wrapper.scss
@@ -5,10 +5,11 @@
     justify-content: space-between;
 }
 
-@media all and (min-width: 975px) {
+@media all and (min-width: 1075px) {
     .l-features-wrapper {
         flex-direction: row;
-        width: 940px;
+        width: 100%;
+        max-width: 940px;
         height: 180px;
     }
 }
