--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -6,6 +6,19 @@
 }
 
 .l-section--offer .l-section__content-wrapper {
-    margin-left: 7%;
-    width: 90%;
+    background: url("../img/offer/background.png");
+    width: 970px;
+    height: 600px;
+    margin: 0;
+    padding: 50px;
+}
+
+.l-section--offer .l-section__content-wrapper::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .75);
+    position: absolute;
+    top: 0;
+    left: 0;
 }
