--- a/static/main.css
+++ b/static/main.css
@@ -82,21 +82,12 @@ body {
     margin-top: 50px; } }
 /* >> l-section--offer -------------------------------------------------- */
 .l-section--offer {
-  background: url("../img/offer/background.png");
-  background-size: cover;
-  background-position: right;
+  background: url("../img/offer/gear.png");
+  background-position: center;
+  background-repeat: no-repeat;
   position: relative;
   height: 600px;
   text-align: left; }
-
-.l-section--offer::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
-  position: absolute;
-  top: 0;
-  left: 0; }
 
 /* >> l-section--shade -------------------------------------------------- */
 .l-section--background_light {
@@ -118,8 +109,20 @@ body {
   z-index: 1; }
 
 .l-section--offer .l-section__content-wrapper {
-  margin-left: 7%;
-  width: 90%; }
+  background: url("../img/offer/background.png");
+  width: 970px;
+  height: 600px;
+  margin: 0;
+  padding: 50px; }
+
+.l-section--offer .l-section__content-wrapper::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  position: absolute;
+  top: 0;
+  left: 0; }
 
 /* l-features-wrapper ---------------------------------------------------- */
 .l-features-wrapper {
