--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -11,6 +11,7 @@
     height: 600px;
     margin: 0;
     padding: 50px;
+    align-self: flex-end;
 }
 
 .l-section--offer .l-section__content-wrapper::before {
