Style partners section

--- a/src/main.scss
+++ b/src/main.scss
@@ -122,6 +122,11 @@
 /* __ opinion__author -------------------------------------------------- */
         @import "blocks/opinion/__author/opinion__author.scss";
 
+/* partners ---------------------------------------------------- */
+    @import "blocks/partners/partners.scss"; 
+/* __ partners__logo -------------------------------------------------- */
+        @import "blocks/partners/__logo/partners__logo.scss";
+
 /* button  ---------------------------------------------------- */
     @import "blocks/button/button.scss"; 
 /* __ button--rectangle -------------------------------------------------- */
