--- a/src/blocks/feature/__description/feature__description.scss
+++ b/src/blocks/feature/__description/feature__description.scss
@@ -2,3 +2,10 @@
     font-size: 14px;
     line-height: 1.5;
 }
+
+.l-section--background_dark .feature__description {
+    color: #ececec;
+    display: flex;
+    justify-content: center;
+    margin: 7px;
+}
