--- a/src/blocks/feature/feature.scss
+++ b/src/blocks/feature/feature.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     margin-top: 50px;
+    width: 310px;
 }
 
 .feature:first-child {
