--- a/src/layout/l-features-wrapper/l-features-wrapper.scss
+++ b/src/layout/l-features-wrapper/l-features-wrapper.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
 @media all and (min-width: 1075px) {
