Set variable for font color

--- a/src/blocks/feature/__description/feature__description.scss
+++ b/src/blocks/feature/__description/feature__description.scss
@@ -4,8 +4,9 @@
 }
 
 .l-section--background_dark .feature__description {
-    color: #ececec;
+    color: $description-light;
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 7px;
 }
