--- a/static/main.css
+++ b/static/main.css
@@ -15,12 +15,9 @@
 -------------------------------------------------------------------------
 
 
-/************************************************************************\
-  1# SETTINGS start ######################################################
-\************************************************************************/
-/************************************************************************\
-  # SETTINGS --- Global start --------------------------------------------
-\************************************************************************/
+
+/* variables  ---------------------------------------------------- */
+/* global  ---------------------------------------------------- */
 *, *::before, *::after {
   margin: 0;
   padding: 0;
@@ -354,7 +351,8 @@ body {
   color: #222222; }
 
 .l-section--background_dark .feature__title {
-  color: #ffffff; }
+  color: #ffffff;
+  margin-bottom: 15px; }
 
 /* __ feature__description -------------------------------------------------- */
 .feature__description {
@@ -365,6 +363,7 @@ body {
   color: #ececec;
   display: flex;
   justify-content: center;
+  align-items: center;
   margin: 7px; }
 
 /* list ---------------------------------------------------- */
