--- a/src/main.scss
+++ b/src/main.scss
@@ -15,12 +15,10 @@
 -------------------------------------------------------------------------
 
 
-/************************************************************************\
-  1# SETTINGS start ######################################################
-\************************************************************************/
-/************************************************************************\
-  # SETTINGS --- Global start --------------------------------------------
-\************************************************************************/
+
+/* variables  ---------------------------------------------------- */
+@import "variables/variables.scss"; 
+/* global  ---------------------------------------------------- */
 @import "global/global.scss"; 
 /************************************************************************\
   # SETTINGS --- Global end ----------------------------------------------
