--- a/src/main.scss
+++ b/src/main.scss
@@ -102,6 +102,10 @@
         @import "blocks/feature/__title/feature__title.scss";  
 /* __ feature__description -------------------------------------------------- */
         @import "blocks/feature/__description/feature__description.scss";
+/* __>> feature__description--small -------------------------------------------------- */
+            @import "blocks/feature/__description/--small/feature__description--small.scss";
+/* __>> feature__description--hashtag -------------------------------------------------- */
+            @import "blocks/feature/__description/--hashtag/feature__description--hashtag.scss";
 
 /* list ---------------------------------------------------- */
     @import "blocks/list/list.scss"; 
