Set icon to the top for the multiple line description

--- a/src/main.scss
+++ b/src/main.scss
@@ -98,6 +98,8 @@
             @import "blocks/feature/__icon-circle/--last/feature__icon-circle--last.scss";
 /* __ feature__icon -------------------------------------------------- */
         @import "blocks/feature/__icon/feature__icon.scss";  
+/* __>> feature__icon--top -------------------------------------------------- */
+        @import "blocks/feature/__icon/--top/feature__icon--top.scss";  
 /* __ feature__title -------------------------------------------------- */
         @import "blocks/feature/__title/feature__title.scss";  
 /* __ feature__description -------------------------------------------------- */
