Style social icons in footer

--- a/src/main.scss
+++ b/src/main.scss
@@ -131,6 +131,13 @@
 /* __ partners__logo -------------------------------------------------- */
         @import "blocks/partners/__logo/partners__logo.scss";
 
+/* socials ---------------------------------------------------- */
+   // @import "blocks/socials/socials.scss"; 
+/* __ socials__icons -------------------------------------------------- */
+        @import "blocks/socials/__icons/socials__icons.scss";
+/* __ socials__icon -------------------------------------------------- */
+        @import "blocks/socials/__icon/socials__icon.scss";
+
 /* button  ---------------------------------------------------- */
     @import "blocks/button/button.scss"; 
 /* __ button--rectangle -------------------------------------------------- */
