Style copyright section

--- a/src/main.scss
+++ b/src/main.scss
@@ -133,6 +133,8 @@
 
 /* socials ---------------------------------------------------- */
    // @import "blocks/socials/socials.scss"; 
+/* __ socials__copyright -------------------------------------------------- */
+        @import "blocks/socials/__copyright/socials__copyright.scss";
 /* __ socials__icons -------------------------------------------------- */
         @import "blocks/socials/__icons/socials__icons.scss";
 /* __ socials__icon -------------------------------------------------- */
