--- a/static/main.css
+++ b/static/main.css
@@ -507,6 +507,22 @@ a:hover {
   border-radius: 50%;
   margin: 5px; }
 
+/* __>> socials__icon--twitter -------------------------------------------------- */
+.socials__icon--twitter:hover {
+  background-color: #00aced; }
+
+/* __>> socials__icon--facebook -------------------------------------------------- */
+.socials__icon--facebook:hover {
+  background-color: #3b5998; }
+
+/* __>> socials__icon--pinterest -------------------------------------------------- */
+.socials__icon--pinterest:hover {
+  background-color: #cb2028; }
+
+/* __>> socials__icon--google -------------------------------------------------- */
+.socials__icon--google:hover {
+  background-color: #da2713; }
+
 /* button  ---------------------------------------------------- */
 .button {
   background-color: #7cc576;
