--- a/static/main.css
+++ b/static/main.css
@@ -497,15 +497,16 @@ a:hover {
 
 /* __ socials__icon -------------------------------------------------- */
 .socials__icon {
-  width: 40px;
-  height: 40px;
   background-color: black;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  margin: 5px; }
+  height: 40px;
+  width: 40px;
+  margin: 5px;
+  transition: background-color 150ms linear; }
 
 /* __>> socials__icon--twitter -------------------------------------------------- */
 .socials__icon--twitter:hover {
