--- a/static/main.css
+++ b/static/main.css
@@ -427,15 +427,24 @@ a:hover {
   align-items: center;
   margin-bottom: 40px; }
 
-/* __ opinion__picture -------------------------------------------------- */
-.opinion__picture {
+/* __ opinion__picture-background -------------------------------------------------- */
+.opinion__picture-background {
   width: 220px;
   height: 220px;
   background-color: #f9f9f9;
   border-radius: 50%;
   margin-right: 45px;
   margin-left: 45px;
-  margin-bottom: 45px; }
+  margin-bottom: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+/* __ opinion__picture -------------------------------------------------- */
+.opinion__picture {
+  width: 90%;
+  height: 90%;
+  border-radius: 50%; }
 
 /* __ opinion__quotation -------------------------------------------------- */
 .opinion__quotation {
