--- a/src/layout/l-section/--offer/l-section--offer.scss
+++ b/src/layout/l-section/--offer/l-section--offer.scss
@@ -1,8 +1,24 @@
  .l-section--offer {
     background: url("../img/offer/gear.png");
-    background-position: center;
+     
+    
+    background-color: #e9e9e9;
+    background-position: 10%;
     background-repeat: no-repeat;
     position: relative;
     height: 600px;
     text-align: left;
 }
+
+/*
+.l-section--banner::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .75);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+*/
