--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -7,11 +7,14 @@
 
 .l-section--offer .l-section__content-wrapper {
     background: url("../img/offer/background.png");
-    width: 970px;
+    min-width: 1070px;
     height: 600px;
     margin: 0;
     padding: 50px;
     align-self: flex-end;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .l-section--offer .l-section__content-wrapper::before {
@@ -22,4 +25,5 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: -100;
 }
