--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -14,6 +14,7 @@
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .l-section--offer .l-section__content-wrapper::before {
