--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -9,7 +9,7 @@
     background: url("../img/offer/background.png");
     width: 100%;
     margin: 0;
-    padding: 25px;
+    padding: 100px 25px;
     align-self: flex-end;
     position: relative;
     background-repeat: no-repeat;
