Assign and use variables for colors

--- a/src/blocks/feature/__description/feature__description.scss
+++ b/src/blocks/feature/__description/feature__description.scss
@@ -4,7 +4,7 @@
 }
 
 .l-section--background_dark .feature__description {
-    color: $description-light;
+    color: $greyLvl2;
     display: flex;
     justify-content: center;
     align-items: center;
