--- a/src/blocks/logo/__pic/logo__pic.scss
+++ b/src/blocks/logo/__pic/logo__pic.scss
@@ -20,7 +20,7 @@
     height: 28px;
     top: 0;
     left: 0;
-    background-color: #7cc576;
+    background-color: $green;
     border-radius: 50%;
     z-index: -10;
 }
