--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -1,3 +1,14 @@
-/* Font colors */
-$description-light: #ececec;
-$green-text: #7cc576;
+/* Font */
+$baseFont: 'Roboto Slab', serif;
+$secondFont: 'Montserrat', sans-serif;
+
+/* Colors */
+
+$greyLvl1: #ffffff;
+$greyLvl2: #ececec;
+$greyLvl3: #cccccc;
+$greyLvl4: #777777;
+$greyLvl5: #555555;
+$greyLvl6: #222222;
+
+$green: #7cc576;
