--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -1,5 +1,5 @@
 .button {
-    background-color: #7cc576;
+    background-color: $green;
     height: 60px;
     border: none;
     position: relative;
@@ -20,7 +20,7 @@
     position: absolute;
     top: 0;
     left: -30px;
-    background-color: #7cc576;
+    background-color: $green;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -32,7 +32,7 @@
     position: absolute;
     top: 0;
     right: -30px;
-    background-color: #7cc576;
+    background-color: $green;
     width: 60px;
     height: 60px;
     border-radius: 50%;
