Assign and use variables for font size

--- a/src/blocks/feature/__description/feature__description.scss
+++ b/src/blocks/feature/__description/feature__description.scss
@@ -4,7 +4,7 @@
 }
 
 .l-section--background_dark .feature__description {
-    color: $greyLvl2;
+    color: $grey-lvl2;
     display: flex;
     justify-content: center;
     align-items: center;
