--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    background-color: #FFFFFF;
+    background-color: $grey-lvl1;
     position: fixed;
     top: 0;
     left: 0;
