--- a/src/blocks/feature/__title/feature__title.scss
+++ b/src/blocks/feature/__title/feature__title.scss
@@ -1,5 +1,5 @@
 .feature__title {
-    font-family: $secondFont;
+    font-family: $font-second;
     font-size: 18px;
     text-transform: uppercase;
     color: #222222;
