--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -1,11 +1,14 @@
 .logo {
     display: flex;
-    align-items: center;
+
     height: 28px;
     margin-left: 20px;
+
+    align-items: center;
 }
 
 .logo:hover .logo__text {
-    color: #222222;
     text-decoration: none;
+
+    color: $grey-lvl6;
 }
