--- a/src/blocks/menu/__list/--open/menu__list--open.scss
+++ b/src/blocks/menu/__list/--open/menu__list--open.scss
@@ -1,15 +1,19 @@
 .menu__list--open {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content:space-around;
     position: absolute;
     top: 80px;
     left: 0;
-    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+
     width: 100%;
     height: 300px;
-    -webkit-box-shadow: 0px 18px 19px 0px rgba(0,0,0,0.37);
-       -moz-box-shadow: 0px 13px 19px 0px rgba(0,0,0,0.37);
-            box-shadow: 0px 13px 19px 0px rgba(0,0,0,0.37);
+
+    background-color: $grey-lvl1;
+    -webkit-box-shadow: 0 18px 19px 0 rgba(0,0,0,.37);
+       -moz-box-shadow: 0 13px 19px 0 rgba(0,0,0,.37);
+            box-shadow: 0 13px 19px 0 rgba(0,0,0,.37);
+
+    align-items: center;
+    justify-content: space-around;
 }
