--- a/static/main.css
+++ b/static/main.css
@@ -17,7 +17,8 @@
 
 
 /* variables  ---------------------------------------------------- */
-/* Font */
+/* Font family*/
+/* Font size*/
 /* Colors */
 /* global  ---------------------------------------------------- */
 *, *::before, *::after {
@@ -173,7 +174,7 @@ a:hover {
 /* header  ---------------------------------------------------- */
 .header {
   width: 100%;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   position: fixed;
   top: 0;
   left: 0;
@@ -198,28 +199,28 @@ a:hover {
 /* logo  ---------------------------------------------------- */
 .logo {
   display: flex;
-  align-items: center;
   height: 28px;
-  margin-left: 20px; }
+  margin-left: 20px;
+  align-items: center; }
 
 .logo:hover .logo__text {
-  color: #222222;
-  text-decoration: none; }
+  text-decoration: none;
+  color: #222222; }
 
 /* __ logo__text -------------------------------------------------- */
 .logo__text {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
+  text-decoration: none;
   text-transform: uppercase;
-  color: #555555;
-  text-decoration: none; }
+  color: #555555; }
 
 /* __ logo__pic -------------------------------------------------- */
 .logo__pic {
   position: relative;
+  display: inline-block;
   width: 28px;
   height: 28px;
-  display: inline-block;
   margin-right: 4px; }
 
 .logo__pic img {
@@ -229,15 +230,15 @@ a:hover {
   transform: translate(-50%, -50%); }
 
 .logo__pic::before {
-  content: "";
   position: absolute;
-  width: 28px;
-  height: 28px;
+  z-index: -10;
   top: 0;
   left: 0;
-  background-color: #7cc576;
+  width: 28px;
+  height: 28px;
+  content: '';
   border-radius: 50%;
-  z-index: -10; }
+  background-color: #7cc576; }
 
 /* menu  ---------------------------------------------------- */
 /* __ menu__list -------------------------------------------------- */
@@ -249,19 +250,19 @@ a:hover {
     display: flex; } }
 /* __>> menu__list--open -------------------------------------------------- */
 .menu__list--open {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
   position: absolute;
   top: 80px;
   left: 0;
-  background-color: white;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 300px;
-  -webkit-box-shadow: 0px 18px 19px 0px rgba(0, 0, 0, 0.37);
-  -moz-box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.37);
-  box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.37); }
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 18px 19px 0 rgba(0, 0, 0, 0.37);
+  -moz-box-shadow: 0 13px 19px 0 rgba(0, 0, 0, 0.37);
+  box-shadow: 0 13px 19px 0 rgba(0, 0, 0, 0.37);
+  align-items: center;
+  justify-content: space-around; }
 
 /* __ menu__item -------------------------------------------------- */
 .menu__item {
@@ -271,11 +272,11 @@ a:hover {
 
 /* __ menu__link -------------------------------------------------- */
 .menu__link {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
-  color: #777777;
   text-decoration: none;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  color: #777777; }
 
 .menu__link:hover {
   color: #222222; }
