--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -14,10 +14,12 @@ $font-size-xxl: 60px;
 
 /* Colors */
 $grey-lvl1: #ffffff;
-$grey-lvl2: #ececec;
-$grey-lvl3: #cccccc;
-$grey-lvl4: #777777;
-$grey-lvl5: #555555;
-$grey-lvl6: #222222;
+$grey-lvl2: #f9f9f9;
+$grey-lvl3: #e9e9e9;
+$grey-lvl4: #ececec;
+$grey-lvl5: #cccccc;
+$grey-lvl6: #777777;
+$grey-lvl7: #555555;
+$grey-lvl8: #222222;
 
 $green: #7cc576;
