--- a/static/main.css
+++ b/static/main.css
@@ -124,8 +124,7 @@ a:hover {
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  background-attachment: fixed; }
+  background-position: center; }
 
 .l-section--offer .l-section__content-wrapper::before {
   content: "";
@@ -137,6 +136,9 @@ a:hover {
   left: 0;
   z-index: -100; }
 
+@media only screen and (min-width: 736px) {
+  .l-section--offer .l-section__content-wrapper {
+    background-attachment: fixed; } }
 /* l-features-wrapper ---------------------------------------------------- */
 .l-features-wrapper {
   width: 100%;
