--- a/src/layout/l-section/--offer/l-section--offer.scss
+++ b/src/layout/l-section/--offer/l-section--offer.scss
@@ -1,6 +1,6 @@
  .l-section--offer {
     background: url("../img/offer/gear.png");
-    background-color: #e9e9e9;
+    background-color: $grey-lvl3;
     background-position: 10%;
     background-repeat: no-repeat;
     position: relative;
