--- a/src/blocks/button/--menu/button--menu.scss
+++ b/src/blocks/button/--menu/button--menu.scss
@@ -2,70 +2,66 @@
     background-color: transparent;
     width: 100px;
     height: 55px;
-    border: 2px solid #777777;
-    font-family: 'Montserrat', sans-serif;
+    border: 2px solid $grey-lvl6;
+    font-family: $font-second;
     font-size: 18px;
     text-transform: uppercase;
-    color: #777777;
+    color: $grey-lvl6;
     font-weight: 100;
     cursor: pointer;
     border-radius: 5px;
     display: flex;
     align-items: center;
     transition: all 300ms linear;
+    
+    &:hover {
+        color: $grey-lvl8;
+        border: 2px solid $grey-lvl8;
+    }
+    
+    &:hover g {
+        stroke: #000000;
+    }
+    
+    span {
+        margin-right: 5px;
+        margin-left: 5px;
+    }
 }
 
 
-.button--menu:hover {
-    color: #222222;
-    border: 2px solid #222222;
-}
-.button--menu:hover g {
-  stroke: #000000;
-}
 
-
-@media all and (min-width: 650px) {
+@media only all and (min-width: 650px) {
     .button--menu {
         display: none;
     }
 }
 
-.button--menu span {
-    margin-right: 5px;
-    margin-left: 5px;
+
+
+.button--open {
+    .icon__open {
+        transform: translateY(-40px);
+        opacity: 0;
+        transition: all 300ms linear;
+        
+    }
+    .icon__close line {
+        opacity: 1;
+        transform: translateY(0);
+        transition: all 300ms linear;
+    }
 }
 
-.button--menu .icon__close line {
-  opacity: 0;
-  transform: translateY(40px);
-}
-
-.button--menu .icon__open {
-  opacity: 1;
-  transform: translateY(-40px);
-}
-
-.button--open .icon__open {
-  transform: translateY(-40px);
-  opacity: 0;
-  transition: all 300ms linear;
-}
-
-.button--open .icon__close line {
-  opacity: 1;
-  transform: translateY(0);
-  transition: all 300ms linear;
-}
-
-.button--close .icon__open {
-  opacity: 1;
-  transform: translateY(0);
-  transition: all 300ms linear;
-}
-
-.button--close .icon__close line {
-  opacity: 0;
-  transform: translateY(40px);
-  transition: all 300ms linear;
+.button--close {
+    .icon__open {
+        opacity: 1;
+        transform: translateY(0);
+        transition: all 300ms linear;   
+    }
+    .icon__close line {
+        opacity: 0;
+        transform: translateY(40px);
+        transition: all 300ms linear;
+    }
 }
