--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -3,10 +3,10 @@
     height: 60px;
     border: none;
     position: relative;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
+    font-family: $font-second;
+    font-size: $font-size-xs;
     text-transform: uppercase;
-    color: #ffffff;
+    color: $grey-lvl1;
     font-weight: 100;
     text-shadow: 0 1px 1px rgba(0, 0, 0, .7);
     letter-spacing: -1px;
@@ -40,8 +40,8 @@
 }
 
 .button:hover, .button:hover::before, .button:hover::after {
-    background-color: #ffffff;
-    color: #222222;
+    background-color: $grey-lvl1;
+    color: $grey-lvl8;
     text-shadow: none;
 }
 
