--- a/static/main.css
+++ b/static/main.css
@@ -563,7 +563,7 @@ a:hover {
   height: 60px;
   border: none;
   position: relative;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   text-transform: uppercase;
   color: #ffffff;
@@ -627,7 +627,7 @@ a:hover {
   width: 100px;
   height: 55px;
   border: 2px solid #777777;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
   text-transform: uppercase;
   color: #777777;
@@ -637,34 +637,22 @@ a:hover {
   display: flex;
   align-items: center;
   transition: all 300ms linear; }
+  .button--menu:hover {
+    color: #222222;
+    border: 2px solid #222222; }
+  .button--menu:hover g {
+    stroke: #000000; }
+  .button--menu span {
+    margin-right: 5px;
+    margin-left: 5px; }
 
-.button--menu:hover {
-  color: #222222;
-  border: 2px solid #222222; }
-
-.button--menu:hover g {
-  stroke: #000000; }
-
-@media all and (min-width: 650px) {
+@media only all and (min-width: 650px) {
   .button--menu {
     display: none; } }
-.button--menu span {
-  margin-right: 5px;
-  margin-left: 5px; }
-
-.button--menu .icon__close line {
-  opacity: 0;
-  transform: translateY(40px); }
-
-.button--menu .icon__open {
-  opacity: 1;
-  transform: translateY(-40px); }
-
 .button--open .icon__open {
   transform: translateY(-40px);
   opacity: 0;
   transition: all 300ms linear; }
-
 .button--open .icon__close line {
   opacity: 1;
   transform: translateY(0);
@@ -674,7 +662,6 @@ a:hover {
   opacity: 1;
   transform: translateY(0);
   transition: all 300ms linear; }
-
 .button--close .icon__close line {
   opacity: 0;
   transform: translateY(40px);
