--- a/src/main.scss
+++ b/src/main.scss
@@ -18,6 +18,8 @@
 
 /* variables  ---------------------------------------------------- */
 @import "variables/variables.scss"; 
+/* mixins  ---------------------------------------------------- */
+@import "mixins/mixins.scss"; 
 /* global  ---------------------------------------------------- */
 @import "global/global.scss"; 
 /************************************************************************\
