--- a/src/blocks/feature/__title/feature__title.scss
+++ b/src/blocks/feature/__title/feature__title.scss
@@ -2,10 +2,10 @@
     font-family: $font-second;
     font-size: 18px;
     text-transform: uppercase;
-    color: #222222;
+    color: $grey-lvl8;
 }
 
 .l-section--background_dark .feature__title {
-    color: #ffffff;
+    color: $grey-lvl1;
     margin-bottom: 15px;
 }
