--- a/src/blocks/heading/__title/--large/heading__title--large.scss
+++ b/src/blocks/heading/__title/--large/heading__title--large.scss
@@ -1,4 +1,8 @@
 .heading__title--large {
     font-size: 50px;
     margin-bottom: 40px;
+    
+    @media only all and (max-width: 360px) {
+        font-size: 43px;
+    }
 }
