--- a/src/blocks/heading/__title/heading__title.scss
+++ b/src/blocks/heading/__title/heading__title.scss
@@ -5,4 +5,8 @@
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 20px;
+    
+    @media only all and (max-width: 360px) {
+        font-size: 33px;
+    }
 }
