Change font size heading title

--- a/src/blocks/heading/__title/--large/heading__title--large.scss
+++ b/src/blocks/heading/__title/--large/heading__title--large.scss
@@ -1,5 +1,5 @@
 .heading__title--large {
-    font-size: 4.28vw;
+    font-size: 60px;
     margin-bottom: 40px;
     
     @media only all and (max-width: 360px) {
