Style list in offer section

--- a/src/blocks/list/__item/list__item.scss
+++ b/src/blocks/list/__item/list__item.scss
@@ -1,7 +1,14 @@
 .list__item {
-    margin-left: 35px;
-    margin-bottom: 10px;
-    padding-left: 15px;
+    background: {
+        image: url("../img/offer/circle-checkmark.svg");
+        position: 0 6px;
+        repeat: no-repeat;
+    }
+    padding: {
+        left: 41px;
+        top: 12px;
+        bottom: 12px;
+    }
 }
 
 .list__item:last-child {
