Comment width for project

--- a/src/blocks/feature/--inline/feature--inline.scss
+++ b/src/blocks/feature/--inline/feature--inline.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    width: 470px;
+    /* width: 470px; */
     margin-top: 15px;
 }
 
