--- a/static/main.css
+++ b/static/main.css
@@ -331,7 +331,7 @@ a:hover {
 .heading__subtitle--subheading {
   font-size: 14px;
   margin-bottom: 25px;
-  width: 425px;
+  /* width: 425px; */
   text-align: left; }
 
 /* project --------------------------------------------------------- */
@@ -457,7 +457,7 @@ a:hover {
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  width: 470px;
+  /* width: 470px; */
   margin-top: 15px; }
 
 .feature--inline:last-of-type {
