Change text-align for project description to justify

--- a/static/main.css
+++ b/static/main.css
@@ -332,7 +332,7 @@ a:hover {
   font-size: 14px;
   margin-bottom: 25px;
   /* width: 425px; */
-  text-align: left; }
+  text-align: justify; }
 
 /* project --------------------------------------------------------- */
 .project {
