--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -14,9 +14,25 @@
     background: $green;
 }
 
+html {
+    min-height: 100%;
+    position: relative;
+}
+
 body {
     font-family: $font-first;
     color: $grey-lvl6;
+}
+
+.body-cover:before {
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(38, 38, 38, .75);
+    position: fixed;
+    z-index: 2;
 }
 
 a {
