--- a/static/main.css
+++ b/static/main.css
@@ -36,9 +36,23 @@
   color: #222222;
   background: #7cc576; }
 
+html {
+  min-height: 100%;
+  position: relative; }
+
 body {
   font-family: "Roboto Slab", serif;
   color: #777777; }
+
+.body-cover:before {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(38, 38, 38, 0.75);
+  position: fixed;
+  z-index: 2; }
 
 a {
   color: inherit;
