Don't display menu list for orientation: landscape

--- a/src/blocks/menu/__list/--open/menu__list--open.scss
+++ b/src/blocks/menu/__list/--open/menu__list--open.scss
@@ -17,3 +17,9 @@
     align-items: center;
     justify-content: space-around;
 }
+
+@media only screen and (orientation: landscape) {
+    .menu__list--open {
+        display: none;
+    }
+}
